[project]
name = "devtools"
version = "0.0.0"
description = "Generic devtools for client / infrastructure development"
authors = [{ name = "Dennis Hilhorst", email = "dhilhorst2000@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "click>=8.2.1,<9",
    "black>=25.1.0,<26",
    "ruff>=0.12.7,<0.13",
    "mypy>=1.17.1,<2",
]

[dependency-groups]
dev = ["pytest>=8.4.2,<9"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project.scripts]
devtools = "devtools.__main__:main"
